# WIngBankAutomation

./: .gitignore  README.md  interactive_console_output.xml  pyproject.toml
env/: .env  .env-prd  .env-uat  settings.py
lib/: Popup_Promotion_Offer.py  Snack_bar.py  __init__.py  excel.py  number.py  profile.py  s_cripts.py
listener/: Listener.py
src/components/: actionButton.robot  getRecipientName.robot  pinCode.robot  selectAccount.robot  selectPurposePayment.robot
src/data/: data_manager.robot  excel_data_path.robot
src/data/excels/PRD/bill-payment/: BillPaymentPRD.xlsx
src/locators/: action_button.robot  currency_exchange_rate.robot  pin_code.robot  popup_promotion_offer.robot  purpose_optional.robot  snackbar_text.robot
src/locators/bill_payment/: bill_payment.robot
src/locators/local_transfer/: transfer_to_own_account.robot  wing_to_wing.robot  wing_wei_luy.robot  wingbank_to_otherbank.robot
src/modules/billPayment/: bill_payment.robot
src/modules/common/: common.robot
src/modules/localTransfer/: wing_to_wing.robot  wing_wei_luy.robot  wingbank_to_otherbank.robot
src/modules/localTransfer/transfer_to_own_account/: confirm_screen.robot  success_screen.robot  transaction_details_screen.robot  transfer_to_own_account.robot  transfer_to_own_account_screen.robot
src/tests/T001localTransfer/: T001_TRANSFER_TO_OWN_ACCOUNT.robot  T002_WING_BANK_TO_WING_BANK.robot  T003_WING_BANK_TO_OTHER_BANK.robot  T004_WING_WEI_LUY.robot
src/tests/T003billPayment/: T001_BILL_PAYMENT.robot
src/utils/: devices.py  helper.py
(+11 files in other folders)
